# starmetal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  audit.toml  deny.toml  depot.toml.example  starmetal.toml.example
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/agents/: cli-engineer.md  core-architect.md  infra-engineer.md  protocol-engineer.md  qa-engineer.md
.ai-rulez/context/: architecture.md  conventions.md
.ai-rulez/rules/: basemind-mcp.md  error-handling.md  feature-flags.md  hexagonal-boundaries.md
.github/workflows/: ci.yaml  live-e2e.yaml  publish-docker.yaml  publish.yaml
crates/depot-adapters/: Cargo.toml
crates/depot-adapters/src/: archive.rs  lib.rs  upstream_http.rs
crates/depot-adapters/src/cargo/: mod.rs  models.rs  upstream.rs
crates/depot-adapters/src/hex/: mod.rs  proto.rs  upstream.rs
crates/depot-adapters/src/maven/: mod.rs  upstream.rs
crates/depot-adapters/src/npm/: mod.rs  models.rs  upstream.rs
crates/depot-adapters/src/nuget/: mod.rs  upstream.rs
crates/depot-adapters/src/pubdev/: mod.rs  upstream.rs
crates/depot-adapters/src/pypi/: mod.rs  upstream.rs
crates/depot-adapters/src/rubygems/: mod.rs  upstream.rs
crates/depot-cli/: Cargo.toml
crates/depot-cli/src/: main.rs  mcp.rs
crates/depot-cli/src/commands/: lock.rs  serve.rs  sync.rs
crates/depot-core/: Cargo.toml
crates/depot-core/src/: config.rs  error.rs  lib.rs  package.rs  ports.rs
crates/depot-core/tests/: generated_tests.rs  schema_validation.rs
crates/depot-ops/: Cargo.toml
crates/depot-ops/src/: lib.rs
crates/depot-server/: Cargo.toml
crates/depot-server/src/: app.rs  state.rs
crates/depot-service/: Cargo.toml
crates/depot-service/src/: service.rs
crates/depot-storage/: Cargo.toml
crates/starmetal-adapters/: Cargo.toml
crates/starmetal-adapters/src/: archive.rs  lib.rs  upstream_http.rs
crates/starmetal-adapters/src/cargo/: mod.rs  models.rs  upstream.rs
crates/starmetal-adapters/src/hex/: mod.rs  models.rs  proto.rs  upstream.rs
crates/starmetal-adapters/src/maven/: mod.rs  upstream.rs
crates/starmetal-adapters/src/npm/: mod.rs  models.rs  upstream.rs
crates/starmetal-adapters/src/nuget/: mod.rs  upstream.rs
crates/starmetal-adapters/src/pubdev/: mod.rs  upstream.rs
crates/starmetal-adapters/src/pypi/: mod.rs  models.rs  upstream.rs
crates/starmetal-adapters/src/rubygems/: mod.rs  upstream.rs
crates/starmetal-cli/: Cargo.toml
crates/starmetal-cli/src/: main.rs  mcp.rs
crates/starmetal-cli/src/commands/: lock.rs  mod.rs  serve.rs  sync.rs
crates/starmetal-core/: Cargo.toml
crates/starmetal-core/src/: config.rs  error.rs  integrity.rs  lib.rs  lockfile.rs  package.rs  policy.rs  ports.rs  publishing.rs  signing.rs  statistics.rs
crates/starmetal-core/src/registry/: cargo.rs  hex.rs  mod.rs  npm.rs  nuget.rs  pubdev.rs  pypi.rs
crates/starmetal-core/testing_data/: 00-FIXTURE-SCHEMA.json
crates/starmetal-core/testing_data/integrity/: 01_blake3_vectors.json
crates/starmetal-core/testing_data/lockfile/: 01_roundtrip.json
crates/starmetal-core/testing_data/package/: 01_pypi_normalization.json  02_storage_keys.json  03_ecosystem_parsing.json
crates/starmetal-core/testing_data/policy/: 01_policy_checks.json
crates/starmetal-core/tests/: generated_tests.rs  registry_types.rs  schema_validation.rs
crates/starmetal-ops/: Cargo.toml
crates/starmetal-ops/src/: lib.rs
crates/starmetal-server/: Cargo.toml
crates/starmetal-server/src/: admin.rs  app.rs  lib.rs  state.rs
crates/starmetal-server/src/middleware/: auth.rs
crates/starmetal-service/: Cargo.toml
crates/starmetal-service/src/: lib.rs  service.rs
crates/starmetal-storage/: Cargo.toml
crates/starmetal-storage/src/: backend.rs  lib.rs
crates/starmetal-storage/tests/: fs_backend.rs  memory_backend.rs
depot-data/npm/body-parser/: _versions.json
depot-data/npm/bytes/: _versions.json
depot-data/npm/call-bind-apply-helpers/: _versions.json
depot-data/npm/call-bound/: _versions.json
docker/: pressure-test.sh  starmetal.toml
docker/proxy-e2e/: fixture_server.py  http_assertions.py  native_clients.sh  pnpm_client.sh  run.sh
docs/: architecture.md  configuration.md  deployment.md  release.md
docs/adr/: 0001-hexagonal-architecture.md  0002-tower-middleware.md  0003-opendal-storage.md  0004-blake3-lockfile.md  0005-protocol-adapters.md  0006-feature-flags.md  0007-json-schema-validation.md  0008-registry-expansion.md  0009-publishing-upload-workflows.md  0010-cli-mcp-operations.md  0011-mvp-support-matrix.md  0012-ci-quality-gates.md  0013-basemind-ai-rulez-alignment.md  0014-management-admin-surface.md  0015-statistics-operational-metrics.md
schemas/: README.md  manifest.json  sources.toml
schemas/depot/: config.schema.json  lockfile.schema.json
schemas/registries/: cargo-config.schema.json  cargo.schema.json  hex.schema.json  npm.schema.json  nuget-package-base-address.schema.json  nuget-registration.schema.json  nuget-service-index.schema.json  pub-package.schema.json  pypi-index.schema.json  pypi.schema.json
schemas/starmetal/: config.schema.json  lockfile.schema.json
scripts/: package-release.sh  publish-docker-gcr.sh  publish-docker-ghcr.sh  release-bump.sh  release-dry-run.sh  release-namespaces.sh  release-tag.sh  update-homebrew-formula.sh
tests/conformance/: Cargo.toml
tests/conformance/fixtures/hex/: sample-package.json
tests/conformance/fixtures/nuget/: service-index.json  versions.json
tests/conformance/fixtures/pub/: sample-package.json
tests/conformance/fixtures/rubygems/: info-rack  versions
tests/conformance/tests/: fixture_specs.rs  publishing_routes.rs  service_backed.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: admin.rs  cargo_registry.rs  healthz.rs  hex.rs  maven.rs  npm.rs  nuget.rs  pubdev.rs  pypi_pip.rs  rubygems.rs
tools/schema-manager/: Cargo.toml
tools/schema-manager/src/: main.rs
tools/test-generator/: Cargo.toml
(+216 files in other folders)
