[workspace]
resolver = "3"
members = [
    "crates/depot-adapters",
    "crates/depot-cli",
    "crates/depot-core",
    "crates/depot-server",
    "crates/depot-service",
    "crates/depot-storage",
    "tests/conformance",
    "tests/integration",
    "tools/schema-manager",
    "tools/test-generator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[workspace.dependencies]

# Fast hashing
ahash = { version = "0.8", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Web framework & middleware
axum = "0.8"

# Encoding / digests
base64 = "0.22"

# Integrity
blake3 = "1"

# Bytes / streaming
bytes = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
depot-adapters = { path = "crates/depot-adapters", default-features = false }

# Workspace crates
depot-core = { path = "crates/depot-core" }
depot-server = { path = "crates/depot-server", default-features = false }
depot-service = { path = "crates/depot-service" }
depot-storage = { path = "crates/depot-storage", default-features = false }

# JSON schema validation
jsonschema = "0.46"

# Fast byte scanning
memchr = "2"

# Storage
opendal = "0.55"
prost = "0.14"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
] }

# JSON schema generation
schemars = "1.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"

# Testing
tempfile = "3"

# Error handling
thiserror = "2"
# Async runtime
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-full",
    "trace",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
