[workspace]
resolver = "3"
members = [
    "crates/depot-adapters",
    "crates/depot-cli",
    "crates/depot-core",
    "crates/depot-ops",
    "crates/depot-server",
    "crates/depot-service",
    "crates/depot-storage",
    "tests/conformance",
    "tests/integration",
    "tools/schema-manager",
    "tools/test-generator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[workspace.dependencies]

# Fast hashing
ahash = { version = "0.8", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Web framework & middleware
axum = { version = "0.8", features = ["multipart"] }

# Encoding / digests
base64 = "0.22"

# Integrity
blake3 = "1"

# Bytes / streaming
bytes = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
depot-adapters = { path = "crates/depot-adapters", default-features = false }

# Workspace crates
depot-core = { path = "crates/depot-core" }
depot-ops = { path = "crates/depot-ops", default-features = false }
depot-server = { path = "crates/depot-server", default-features = false }
depot-service = { path = "crates/depot-service" }
depot-storage = { path = "crates/depot-storage", default-features = false }

# Compression
flate2 = "1"

# Hex encoding
hex = "0.4"

# JSON schema validation
jsonschema = "0.46"

# Fast byte scanning
memchr = "2"

# Storage
opendal = "0.56"
prost = "0.14"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
] }

# MCP
rmcp = { version = "1.7.0", default-features = false, features = [
    "macros",
    "server",
    "transport-io",
] }

# JSON schema generation
schemars = "1.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
sha1 = "0.11"
sha2 = "0.11"
tar = "0.4.46"

# Testing
tempfile = "3"

# Error handling
thiserror = "2"
# Async runtime
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-full",
    "trace",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
