[package]
name = "depot-adapters"
description = "Protocol adapters (PyPI, npm, Cargo, Hex) for depot"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "ahash",
    "async-trait",
    "axum",
    "bytes",
    "depot-core",
    "reqwest",
    "serde",
    "serde_json",
    "thiserror",
    "tokio",
    "tracing",
]

[features]
default = ["pypi", "npm", "cargo-registry", "hex"]
pypi = []
npm = []
cargo-registry = []
hex = []
maven = []
rubygems = []
nuget = []
pub = []

[dependencies]
ahash.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
depot-core.workspace = true
flate2.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
