[package]
name = "depot-ops"
description = "Shared local operator API for Depot CLI and MCP frontends"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pypi = ["depot-adapters/pypi", "depot-server/pypi"]
npm = ["depot-adapters/npm", "depot-server/npm"]
cargo-registry = ["depot-adapters/cargo-registry", "depot-server/cargo-registry"]
hex = ["depot-adapters/hex", "depot-server/hex"]
maven = ["depot-adapters/maven", "depot-server/maven"]
rubygems = ["depot-adapters/rubygems", "depot-server/rubygems"]
nuget = ["depot-adapters/nuget", "depot-server/nuget"]
pub = ["depot-adapters/pub", "depot-server/pub"]
backend-fs = ["depot-storage/backend-fs"]
backend-memory = ["depot-storage/backend-memory"]
backend-s3 = ["depot-storage/backend-s3"]
backend-gcs = ["depot-storage/backend-gcs"]

[dependencies]
ahash.workspace = true
bytes.workspace = true
depot-adapters = { workspace = true, default-features = false }
depot-core.workspace = true
depot-server = { workspace = true, default-features = false }
depot-service.workspace = true
depot-storage = { workspace = true, default-features = false }
schemars.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
