[package]
name = "depot-server"
description = "HTTP server and Tower middleware stack for depot"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["depot-adapters", "depot-storage", "tokio", "tower", "tracing"]

[features]
default = ["pypi", "npm", "cargo-registry", "hex"]
pypi = ["depot-adapters/pypi"]
npm = ["depot-adapters/npm"]
cargo-registry = ["depot-adapters/cargo-registry"]
hex = ["depot-adapters/hex"]
maven = ["depot-adapters/maven"]
rubygems = ["depot-adapters/rubygems"]
nuget = ["depot-adapters/nuget"]
pub = ["depot-adapters/pub"]

[dependencies]
axum.workspace = true
depot-adapters = { workspace = true, default-features = false }
depot-core.workspace = true
depot-storage = { workspace = true, default-features = false }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
