[package]
name = "starmetal-adapters"
description = "Protocol adapters (PyPI, npm, Cargo, Hex) for Starmetal"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "ahash",
    "async-trait",
    "axum",
    "bytes",
    "starmetal-core",
    "reqwest",
    "serde",
    "serde_json",
    "thiserror",
    "tokio",
    "tracing",
]

[features]
default = ["pypi", "npm", "cargo-registry", "hex"]
pypi = []
npm = []
cargo-registry = []
hex = []
maven = []
rubygems = []
nuget = []
pub = []

[dependencies]
ahash.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
flate2.workspace = true
hex.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
starmetal-core.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true
