[package]
name = "starmetal-service"
description = "Application service layer: pull-through cache, policy enforcement, integrity checks"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]

[dependencies]
ahash.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
pkcs8.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
starmetal-core.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
