[package]
name = "starmetal-storage"
description = "Storage backends for Starmetal, built on OpenDAL"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror", "tracing"]

[features]
default = ["backend-fs"]
backend-fs = ["opendal/services-fs"]
backend-s3 = ["opendal/services-s3"]
backend-gcs = ["opendal/services-gcs"]
backend-memory = ["opendal/services-memory"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
opendal.workspace = true
starmetal-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
