[package]
name = "depot-conformance-tests"
description = "Fixture-based registry conformance tests for depot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ahash.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
depot-adapters = { path = "../../crates/depot-adapters", default-features = false, features = [
    "cargo-registry",
    "hex",
    "maven",
    "npm",
    "nuget",
    "pypi",
    "pub",
    "rubygems",
] }
depot-core.workspace = true
depot-service.workspace = true
depot-storage = { workspace = true, features = ["backend-memory"] }
flate2.workspace = true
roxmltree = "0.21"
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tower.workspace = true
zip.workspace = true
