[package]
name = "starmetal-conformance-tests"
description = "Fixture-based registry conformance tests for starmetal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ahash.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
flate2.workspace = true
roxmltree = "0.21"
serde_json.workspace = true
starmetal-adapters = { path = "../../crates/starmetal-adapters", default-features = false, features = [
    "cargo-registry",
    "hex",
    "maven",
    "npm",
    "nuget",
    "pypi",
    "pub",
    "rubygems",
] }
starmetal-core.workspace = true
starmetal-service.workspace = true
starmetal-storage = { workspace = true, features = ["backend-memory"] }
tar.workspace = true
tokio.workspace = true
tower.workspace = true
zip.workspace = true
