[package]
name = "starmetal-integration-tests"
description = "Integration tests for starmetal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ahash.workspace = true
axum.workspace = true
starmetal-adapters = { workspace = true, features = [
    "cargo-registry",
    "hex",
    "maven",
    "npm",
    "nuget",
    "pypi",
    "pub",
    "rubygems",
] }
starmetal-core.workspace = true
starmetal-server = { workspace = true, features = [
    "cargo-registry",
    "hex",
    "maven",
    "npm",
    "nuget",
    "pypi",
    "pub",
    "rubygems",
] }
starmetal-service.workspace = true
starmetal-storage = { workspace = true, features = ["backend-memory"] }
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
