[package]
name = "depot-schema-manager"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
blake3.workspace = true
clap = { workspace = true, features = ["derive"] }
depot-core.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
