[package]
name = "starmetal-schema-manager"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
blake3.workspace = true
clap = { workspace = true, features = ["derive"] }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
starmetal-core.workspace = true
tokio.workspace = true
toml.workspace = true
